--- a/estilo.css
+++ b/estilo.css
@@ -11,6 +11,10 @@ header {
     display: block;
 }
 
+strong {
+    font-weight: bold;
+}
+
 h1 {
     font-family: Poppins, sans-serif;
     color: white;
