--- a/estilo.css
+++ b/estilo.css
@@ -143,6 +143,11 @@ span{
     font-size: 30px;
 }
 
+.sentence {
+    text-align: center;
+    font-size: 20px;
+}
+
 .botao{
     margin-top: 40px;
 }
