--- a/estilo.css
+++ b/estilo.css
@@ -43,11 +43,16 @@ main{
     color: rgb(26, 208, 63);
 }
 
-p{
+p {
     line-height: 30px;
     max-width: 500px;
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     margin-bottom: 30px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 a{
