--- a/estilo.css
+++ b/estilo.css
@@ -174,6 +174,12 @@ span{
     font-size: 22px;
 }
 
+.you {
+    font-size: 30px;
+    line-height: 50px;
+    color: rgb(26, 208, 63);
+}
+
 @media screen and (max-width: 821px){
 
     header{
