--- a/estilo.css
+++ b/estilo.css
@@ -48,12 +48,9 @@ p {
     line-height: 30px;
     max-width: 500px;
     font-family: Poppins, sans-serif;
+    margin-top: 16px;
     margin-bottom: 30px;
     display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
 }
 
 a{
